fixed: 更新“常见问题-安装部署”问题